# SainoHelicopter

./: .gitignore  CMakeLists.txt  ControlPanel.qml  FirstRunInfo.qml  Helicopter.qml  HelicopterMesh.qrc  HelicopterShaders.qrc  HelicopterTopDown.qml  HelicopterView.qml  LinearIndicator.qml  ListIndicator.qml  Main.qml  PulseLoader.qml  README.MD  TODO.txt  TextDisplay.qml  TumblerSelector.qml  fonts.qrc  images.qrc  indicators.qrc  main.cpp  mesh.qrc  tumbler-icons.qrc  vectors.qrc
assets/: top-down.pdn
mesh/: ah64_APACHE_mesh.mesh  glass_mesh.mesh
shaders/: wireframe.frag  wireframe.vert
